--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,6 @@
 {
   "compilerOptions": {
-    "noEmitOnError": false,
-    "outDir": "./build",
-    "sourceMap": false
+    "allowSyntheticDefaultImports": true
   },
   "exclude": ["./build**/**/*"],
   "extends": "./tsconfig.base.declaration"
