--- a/src/install/files/tsconfig.json
+++ b/src/install/files/tsconfig.json
@@ -1,3 +1,3 @@
 {
-  "extends": "./node_modules/typescript-base/tsconfig.base.json"
+  "extends": "./node_modules/@linkening/typescript-base/tsconfig.base.declaration.json"
 }
